--- a/freelancer/index.html
+++ b/freelancer/index.html
@@ -18,6 +18,10 @@
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 
+    <style type="text/css">
+    p{font-family: "微软雅黑";}
+    </style>
+
     <!-- IE8 support for HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -151,35 +155,34 @@
                 
                             <h2 ><font face="微软雅黑">校园网站</font></h2>
                             <hr class="star-primary">
-                            <table align = "left">
-                            <style>
-                                td{
-                                text-align: left;
-                                font-family: "微软雅黑"
-                                }
-                            </style>
+                            <div>
+                            <table align = "right">
                             <tr>
-                                <td ><strong><h3><a href="http://www.seu.edu.cn/" target="_blank">东大主页</a></h3></strong></td>
-                                <td ><h3>竞赛，学术讲座信息：<strong><a href="http://jwc.seu.edu.cn/">东南大学教务处</a></strong></h3></td>
+                                <td ><p><strong><a href="http://www.seu.edu.cn/" target="_blank">东大主页</a></strong></p></td>
+                                <td ><p>竞赛，学术讲座信息：<strong><a href="http://jwc.seu.edu.cn/">东南大学教务处</a></strong></p></td>
                             </tr>
                             <tr>
-                                <td><h3>查课表，查成绩，选课：<strong><a href="http://www.seu.edu.cn/">东南大学教务处</a></strong></h3></td>
-                                <td><h3>评教，考试报名，体育理论考试：<strong><a href="http://my.seu.edu.cn/">东南大学个人信息门户</a></strong></h3></td>
+                                <td><p>查课表，查成绩，选课：<strong><a href="http://jwc.seu.edu.cn/">东南大学教务处</a></strong></p></td>
+                                <td><p>评教，考试报名，体育理论考试：<strong><a href="http://my.seu.edu.cn/">东南大学个人信息门户</a></strong></p></td>
                             </tr>
                             <tr>
-                                <td><h3>社团信息平台，东大之声电台，失物招领平台：<strong><a href="http://herald.seu.edu.cn/"><br>东南大学先声网站</a></strong><h3></td>
-                                <td><h3>发帖交流，校内新闻，pt站：<strong><a href="http://bbs.seu.edu.cn/">虎踞龙盘BBS站</a></strong></h3></td>
+                                <td><p>社团信息平台，东大之声电台，失物招领平台：<strong><a href="http://herald.seu.edu.cn/"><br>东南大学先声网站</a></strong></p></td>
+                                <td><p>发帖交流，校内新闻，pt站：<strong><a href="http://bbs.seu.edu.cn/">虎踞龙盘BBS站</a></strong></p></td>
                             </tr>
                             <tr>、
-                                <td><h3>查跑操次数：<strong><a href="http://tyx.seu.edu.cn/">东南大学体育系</a></strong></h3></td>
-                                <td><h3>物理实验选课，课表查询，成绩查询：<strong><a href="http://phylab.seu.edu.cn/">物理实验中心</a></strong></h3></td>
+                                <td><p>查跑操次数：<strong><a href="http://tyx.seu.edu.cn/">东南大学体育系</a></strong></p></td>
+                                <td><p>物理实验选课，课表查询，成绩查询：<strong><a href="http://phylab.seu.edu.cn/">物理实验中心</a></strong></p></td>
                             </tr>
                             <tr>
-                                <td><h3>bras申请，充值，bras连接客户端下载：<strong><a href="http://nic.seu.edu.cn/">网络中心</a></strong></h3></td>
+                                <td><p>bras申请，充值，bras连接客户端下载：<strong><a href="http://nic.seu.edu.cn/">网络中心</a></strong></p></td>
                             </tr>
-                            </table>
-                            <br>
-                             <center><button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> 回到主页</button></center>
+                            <tr>
+                            <td/>
+                             <td><button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> 回到主页</button></td>
+                            </tr>
+                         </table>
+                     </div>
+                         
             </div>
         </div>
     </div>
@@ -195,14 +198,8 @@
                             <h2 ><font face="微软雅黑">开学报到啦！</font></h2>
                             <hr class="star-primary">
                             <h3><font face="微软雅黑">行李</font></h3>
-                            <style>
-                                p{
-                                text-align: left;
-                                font-family: "微软雅黑"
-                                }
-                            </style>
                             <p >公寓用品可以选择到校后购买也可以从家里自己带。被褥可以自己带（其实学校提供的也不错），其他的东西（如水瓶，脸盆，蚊帐等等）完全没有必要从家里带，可以到校后购买，价格也比较合理。</p>
-                            <h3 ><font face="微软雅黑">到校</font></h3>
+                            <h3 >到校</h3>
                             <p >报到不需要很早到校的，开学日期前一两天就可以了。学校在南京火车站、南京中央门长途汽车站等站点设立了新生接待点，接待点的校车可以直接将新生送到报到地点。如果没找到接待点的话，可以坐地铁一号线（火车站就有地铁站，终点站是中国药科大学的那条线）到百家湖，然后打车到九龙湖校区（车费在20元以内）。如果是坐飞机来南京，建议直接打车到九龙湖校区，或者先乘机场大巴到中华门下，再乘地铁也可以。</p>
                             <h3 ><font face="微软雅黑">军训</font></h3>
                             <p >根据往年情况，军训将在开学第一天开始，时间为三周，其中有一天为拉练，中间基本没有休息日，最后一天汇报表演。军训生活是艰苦的，每天训练时间长达10多个小时。从早上6:40一直会持续到晚上9:00，当然，会留给你足够的三餐和午休时间，军训的要求也会非常严格，要做好充分的生理和心理准备，注意防晒和补充水分、营养，身体不好的同学最好备一点防暑降温用品</p>
